# xfoil

./: CHANGES.md  CMakeLists.txt  README.md
orrs/src/: CMakeLists.txt  intai.f  osrun.f  osseq.f  roll.f
src/: CMakeLists.txt  pntops.f  xfoil.f  xgdes.f  xgeom.f  xmdes.f  xoper.f  xqdes.f  xtcam.f
